--- a/.github/workflows/distribute.yaml
+++ b/.github/workflows/distribute.yaml
@@ -1,18 +1,38 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+name: Build and Distribute
+run-name: ${{ github.actor }} is building FileNinja
 on: [push]
 jobs:
-  Explore-GitHub-Actions:
+  Build:
     runs-on: ubuntu-latest
+    #runs-on: [self-hosted, linux, x64, gpu]
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - name: Check out repository code
         uses: actions/checkout@v4
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.11
+      - name: Install FileNinja dependencies
         run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+          python -m pip install .
+      - name: Build FileNinja
+        run: |
+          python -m pip install .[build]
+          pyinstaller src/file_ninja/main.py -n fini
+      - name: Verify Build
+        run: |
+          if ! ./dist/fini/fini --help; then
+            exit 1
+          fi
+      - name: Package FileNinja
+        run: |
+          ninja_version=$(cat VERSION)
+          runner_os=$(echo "${{runner.os}}" | awk '{print tolower($0)}')
+          runner_arch=$(echo "${{runner.arch}}" | awk '{print tolower($0)}')
+          echo $ninja_version
+          echo $runner_os
+          echo $runner_arch
+        env:
+          ninja_version: ''
+          runner_os: ''
+          runner_arch: ''
