--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
   "click>=8.1.7,<9.0.0"
 ]
 
+[project.scripts]
+fini = "file_ninja.main:main"
 
 [project.optional-dependencies]
 build = ["pyinstaller>=6.10,<7.0.0"]
