--- a/.github/workflows/distribute.yaml
+++ b/.github/workflows/distribute.yaml
@@ -5,6 +5,10 @@ jobs:
   Build:
     runs-on: ubuntu-latest
     #runs-on: [self-hosted, linux, x64, gpu]
+    env:
+      ninja_version: ''
+      release_id: ''
+      release_filename: ''
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
@@ -12,6 +16,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: 3.11
+      - name: Set release version
+        run: |
+          ninja_version=$(cat VERSION)
+          echo "ninja_version=$ninja_version" >> $GITHUB_ENV
       - name: Install FileNinja dependencies
         run: |
           python -m pip install .
@@ -26,13 +34,41 @@ jobs:
           fi
       - name: Package FileNinja
         run: |
-          ninja_version=$(cat VERSION)
           runner_os=$(echo "${{runner.os}}" | awk '{print tolower($0)}')
           runner_arch=$(echo "${{runner.arch}}" | awk '{print tolower($0)}')
-          echo $ninja_version
-          echo $runner_os
-          echo $runner_arch
+          release_filename="file_ninja_${ninja_version}_${runner_os}_${runner_arch}.tar.gz"
+          tar -czf $release_filename dist/fini
+          printf "FileNinja package: %s\n" $release_filename
+          echo "release_filename=$release_filename" >> $GITHUB_ENV
         env:
-          ninja_version: ''
           runner_os: ''
           runner_arch: ''
+      - name: Create Release
+        run: |
+          release_id=$(gh api \
+            --method POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            /repos/${{ github.repository }}/releases \
+            -f "tag_name=v${ninja_version}" \
+            -f "target_commitish=main" \
+            -f "name=v${ninja_version}" \
+            -f "body=." \
+            -F "draft=true" \
+            -F "prerelease=false" \
+            -F "generate_release_notes=true" | jq .id)
+          echo "release_id=$release_id" >> $GITHUB_ENV
+        env:
+          GH_TOKEN: ${{secrets.MYPAT}}
+      - name: Upload FileNinja package
+        run: |
+          curl \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            -H "Authorization: Bearer ${MYPAT}" \
+            -H "Content-Type: application/octet-stream" \
+            --data-binary "@${release_filename}" \
+            "https://uploads.github.com/repos/${{ github.repository }}/releases/${release_id}/assets?name=${release_filename}"
+        env:
+          MYPAT: ${{secrets.MYPAT}}
